@@ -1,3 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<Module>
+<ModulePrefs title="balatro"/>
+<Content type="html"><![CDATA[
 <!doctype html>
 <html lang="en-us">
 
@@ -129,3 +133,5 @@
 </body>
 
 </html>
+]]></Content>
+</Module>
