@@ -4,3 +4,4 @@ but I'm back.
 [+] Added Kindergarten 1
 [+] Added Kindergarten 2
 [+] Added Kindergarten 3
+[+] Added Balatro
