@@ -26,6 +26,7 @@ but I'm back.
 [+] Added Kindergarten 1
 [+] Added Kindergarten 2
 [+] Added Kindergarten 3
+[+] Added Balatro
 
 09/27/2025:
 [!] Hey! I'm probably going to take a small break from adding suggestions.
